--- a/settings.ini
+++ b/settings.ini
@@ -8,14 +8,14 @@ author = E Jimenez
 author_email = ejimenez@intekglobal.com
 copyright = Apache License Version 2.0
 branch = master
-version = 0.0.0
+version = 0.0.1
 min_python = 3.6
 audience = Developers
 language = English
 custom_sidebar = False
 license = apache2
 status = 2
-requirements = deeppavlov
+requirements = deeppavlov pandas numpy
 nbs_path = nbs
 doc_path = docs
 doc_host = https://kikejimenez.github.io
