Set theme jekyll-theme-time-machine

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -60,5 +60,5 @@ sidebars:
 - home_sidebar
 permalink: pretty
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-time-machine
 baseurl: /let_me_answer_for_you/
